# trustworthy-adk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: References.md
examples/workspace/: agent.py  conversation_senarios.json  eval_config.json  eval_set.evalset.json  session_input.json  workspace_agent_profile.json  workspace_agent_profile.md
examples/workspace/tools/: calendar_tool.py  email_tool.py  mock.py  user.py
src/trustworthy/: __init__.py
src/trustworthy/agents/: __init__.py  action_selector.py  anthropic_action_selector.py
src/trustworthy/analysis/: __init__.py
src/trustworthy/analysis/agentic_profiler/: __main__.py  radar_chart_tool.py  rubric.py
src/trustworthy/plugins/: __init__.py  hitl_tool.py  soft_instruction_control.py
tests/: conftest.py  test_action_selector_agent.py  test_anthropic_action_selector.py  test_package.py  test_plugin_soft_instruction_control.py
trustworthy-core/: pyproject.toml
trustworthy-core/src/trustworthy_core/: __init__.py  canary.py  config.py  deescalation.py  hints.py  patterns.py  rewriter.py  rubric.py  statistics.py  visualization.py
trustworthy-core/tests/: __init__.py  test_canary.py  test_deescalation.py  test_patterns.py  test_rubric.py  test_statistics.py
trustworthy-mcp/: README.md  pyproject.toml
trustworthy-mcp/src/trustworthy_mcp/: __init__.py  server.py
trustworthy-mcp/src/trustworthy_mcp/approval/: __init__.py  cli.py  manager.py
trustworthy-mcp/src/trustworthy_mcp/audit/: __init__.py  logger.py
trustworthy-mcp/src/trustworthy_mcp/policy/: __init__.py  classifier.py  engine.py  output_guard.py  sanitizer.py
trustworthy-mcp/src/trustworthy_mcp/resources/: __init__.py  profiler.py
trustworthy-mcp/src/trustworthy_mcp/tools/: __init__.py  intent_monitor.py  registry.py
trustworthy-mcp/tests/: __init__.py  test_approval.py  test_intent_monitor.py  test_output_guard.py  test_policy_engine.py  test_profiler.py  test_registry.py  test_sanitizer.py
trustworthy-proxy/: pyproject.toml
trustworthy-proxy/src/trustworthy_proxy/: __init__.py  cli.py  interceptor.py  server.py
trustworthy-proxy/tests/: __init__.py  test_interceptor.py
