[project]
name = "trustworthy-adk"
version = "0.1.0"
description = "Security-focused plugins and tools for building trustworthy AI agents with Google ADK"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Trustworthy ADK Contributors"},
]
maintainers = [
    {name = "Trustworthy ADK Contributors"},
]
keywords = [
    "ai",
    "agents", 
    "security",
    "prompt-injection",
    "trustworthy-ai",
    "google-adk",
    "llm-security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.3.1",
    "google-adk[eval]>=1.19.0",
    "google-genai>=1.52.0",
    "kaleido>=0.2.1",
    "openhands-sdk>=1.3.0",
    "openhands-tools>=1.3.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustworthy"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "jupyterlab>=4.5.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]
