[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustworthy-proxy"
version = "0.1.0"
description = "API proxy for trustworthy AI security - intercepts Claude Code traffic for prompt-level sanitization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Trustworthy AI Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "security", "proxy", "prompt-injection", "claude"]
dependencies = [
    "trustworthy-core>=0.1.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "starlette>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
]

[project.scripts]
trustworthy-proxy = "trustworthy_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/trustworthy-adk"
Documentation = "https://github.com/anthropics/trustworthy-adk#readme"
Repository = "https://github.com/anthropics/trustworthy-adk"

[tool.hatch.build.targets.wheel]
packages = ["src/trustworthy_proxy"]
